--- a/templates/global/sitewide.html
+++ b/templates/global/sitewide.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <link rel="icon" href="/static/favicon.ico">
 
-  <title>Dispatch Dashboard</title>
+  <title></title>
 
-  <!-- JavaScript -->
+  <!-- CDN JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://code.jquery.com/jquery-migrate-1.0.0.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
   <script src="/static/js/jquery.tablesorter.pager.js"></script>
   
 
-  <!-- CSS -->
+  <!-- CDN CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
   <!-- Local CSS -->
